# flux-regional-prompting

./: README.md  infer_flux_regional.py  pipeline_flux_controlnet_regional.py  pipeline_flux_regional.py  pyproject.toml  transformer_flux.py
src/flux_regional_prompting/: utils.py
src/flux_regional_prompting/models/: __init__.py  attention_processor.py
src/flux_regional_prompting/models/transformers/: __init__.py  transformer_flux.py
src/flux_regional_prompting/pipelines/: __init__.py
src/flux_regional_prompting/pipelines/flux/: __init__.py  pipeline_flux.py  pipeline_flux_controlnet.py
tests/: test_regional_flux.py  test_regional_flux_controlnet.py
