[project]
name = "flux-regional-prompting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "diffusers[torch]>=0.31.0",
    "protobuf<3.21.0",
    "sentencepiece>=0.2.0",
    "transformers>=4.30.0",
]

[dependency-groups]
dev = ["mypy>=1.0.0", "pytest>=6.0.0", "ruff>=0.1.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
